--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -44,6 +44,11 @@ form.register=Зарегистрироваться
 
 #user page
 user.page.title=Личный кабинет пользователя
-user.id=ID
 user.role=Роль
 user.rating=Рейтинг
+
+#footer
+help_title=Помощь
+about_rent_title=Об аренде
+information_title=Информация
+copyright=Все права защищены © Разработка сайта
