--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -10,6 +10,7 @@ rules_title=Правила аренды
 stocks_title=Акции
 catalog_title=Каталог
 contacts_title=Контакты
+incorrect_data=Некорректные данные, попробуйте еще раз
 
 #main page content
 searching_form_title=Поиск доступных авто
