--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -4,6 +4,7 @@ header.button.en=ENG
 hello=Привет
 log_in_title=Войти
 log_out_title=Выйти
+go_to_main_page=вернуться на главную
 registration_title=Регистрация
 news_title=Новости
 rules_title=Правила аренды
@@ -11,6 +12,7 @@ stocks_title=Акции
 catalog_title=Каталог
 contacts_title=Контакты
 incorrect_data=Некорректные данные, попробуйте еще раз
+error_404_title=Извините, страница не найдена!
 
 #main page content
 searching_form_title=Поиск доступных авто
