--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,11 @@
   </error-page>
 
   <error-page>
+    <error-code>500</error-code>
+    <location>/WEB-INF/jsp/500.jsp</location>
+  </error-page>
+
+  <error-page>
     <exception-type>java.lang.Throwable</exception-type>
     <location>/exception</location>
   </error-page>
