--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -13,6 +13,9 @@ catalog_title=Каталог
 contacts_title=Контакты
 incorrect_data=Некорректные данные, попробуйте еще раз
 error_404_title=Извините, страница не найдена!
+error_500_title=Извините, непредвиденная ошибка!
+error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
+stack-trace-title=Если вы разработчик, это вам поможет
 
 #main page content
 searching_form_title=Поиск доступных авто
@@ -46,9 +49,11 @@ form.search_title=Найти
 form.register=Зарегистрироваться
 
 #user page
-user.page.title=Личный кабинет пользователя
 user.role=Роль
 user.rating=Рейтинг
+user.orders.title=Заказы
+user.passport_data.title=Паспортные данные
+user.cards.title=Банковыские карты
 
 #footer
 help_title=Помощь
