--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost/car_rental?allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false
+db.url=jdbc:mysql://localhost/car_rental?allowPublicKeyRetrieval=true&serverTimezone=Europe/Moscow&useSSL=false
 db.user=root
 db.password=12345
 db.poolsize=5
