--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,4 +48,11 @@
     <location>/exception</location>
   </error-page>
 
+  <jsp-config>
+    <taglib>
+      <taglib-uri>http://localhost:8080/CarRentalFinalProjectJWD/mytag</taglib-uri>
+      <taglib-location>/WEB-INF/tld/mytags.tld</taglib-location>
+    </taglib>
+  </jsp-config>
+
 </web-app>
