--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -11,10 +11,6 @@ rules=Правила аренды
 stocks=Акции
 catalog=Каталог
 contacts=Контакты
-error_404_title=Извините, страница не найдена!
-error_500_title=Извините, непредвиденная ошибка!
-error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
-stack_trace_title=Если вы разработчик, это вам поможет
 price_per_day=BYN в сутки
 currency=BYN
 to_rent=Арендовать
@@ -23,7 +19,13 @@ surname=Фамилия
 name=Имя
 save_title=Сохранить
 cancel_title=Отменить
-delete.warning=Действие нельзя отменить, вы уверены?
+
+#info
+warning.delete=Действие нельзя отменить, вы уверены?
+warning.action_not_approved=Действие не одобрено!
+error_404_title=Извините, страница не найдена!
+error_500_title=Извините, непредвиденная ошибка!
+error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
 
 #data
 data.edit=изменить
@@ -114,7 +116,6 @@ bankcard.owner_title=Держатель карты
 bankcard.data_retention_guarantee=100% гарантия защиты данных
 bankcard.message.exists=Такая карта уже зарегистрирована
 bankcard.message.not_exists=У вас еще нет привязанных карт
-bankcard.message.not_exist_for_admin=Нет привязанных карт
 
 #car
 car.transmission=Коробка передач
