--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -9,7 +9,8 @@ registration=Регистрация
 news=Новости
 rules=Правила аренды
 stocks=Акции
-catalog=Каталог
+cars_title=Автомобили
+our_cars_title=Наши автомобили
 contacts=Контакты
 price_per_day=BYN в сутки
 currency=BYN
@@ -129,6 +130,7 @@ car.fuel_type.diesel=дизель
 car.description=Краткое описание
 car.features=Особенности
 car.nearest_available_date=Ближайшая доступная дата
+car.discount_title=Ваша скидка
 
 #footer
 more_about_us=Больше о нас
