--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -20,6 +20,7 @@ surname=Фамилия
 name=Имя
 save_title=Сохранить
 cancel_title=Отменить
+work_schedule=с 9:00 до 21:00 ежедневно
 
 #info
 warning.delete=Действие нельзя отменить, вы уверены?
@@ -34,9 +35,11 @@ data.confirm=подтвердить
 data.cancel=отменить
 data.update_error=Ошибка обновления, данные не обновлены
 data.add_error=Ошибка добавления данных
+data.create_error=Ошибка создания, попробуйте позже
 data.incorrect_data=Некорректные данные, попробуйте еще раз
 data.retrieve_error=Ошибка получения данных, попробуйте позже
 data.updated=Данные обновлены
+data.successfully=Успешно!
 data.delete_error=Ошибка удаления
 
 #main page content
@@ -82,7 +85,7 @@ user.registration_date=Дата регистрации
 
 #order
 order.status.new=новый
-order.status.pending=обрабатывается
+order.status.pending=обработка
 order.status.paid=оплачен
 order.status.rent=аренда
 order.status.ended=завершен
@@ -90,10 +93,9 @@ order.status.expired=просрочен
 order.status.canceled=отменен
 order.date=Дата
 order.status=Статус
-order.rental_start=Начало аренды
-order.rental_end=Конец аренды
 order.car=Автомобиль
 order.bill_sum=Сумма счета
+order.is_paid=Оплачен
 order.comment=Комментарий
 order.not_exists=У вас еще не было заказов
 order.message_start=Перейдите в
@@ -129,7 +131,7 @@ car.fuel_type.petrol=бензин
 car.fuel_type.diesel=дизель
 car.description=Краткое описание
 car.features=Особенности
-car.nearest_available_date=Ближайшая доступная дата
+car.nearest_available_date=Доступна с
 car.discount_title=Ваша скидка
 
 #footer
