--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -14,6 +14,7 @@ our_cars_title=Наши автомобили
 contacts=Контакты
 price_per_day=BYN в сутки
 currency=BYN
+payment=Оплата
 to_rent=Арендовать
 general_information=Общая информация
 surname=Фамилия
@@ -91,6 +92,7 @@ order.status.rent=аренда
 order.status.ended=завершен
 order.status.expired=просрочен
 order.status.canceled=отменен
+order_title=Заказ
 order.date=Дата
 order.status=Статус
 order.car=Автомобиль
@@ -100,6 +102,14 @@ order.comment=Комментарий
 order.not_exists=У вас еще не было заказов
 order.message_start=Перейдите в
 order.message_end=чтобы сделать заказ
+order.total=итого
+order.days=дней
+order.fill_out_data_in_office=Заполнить данные в офисе
+order.update_passport_data_in_office=Обновить паспортные данные
+order.pay_in_office=Оплатить в офисе
+order.use_other_card=Использовать другую карту
+order.add_card=Добавить банковскую карту
+order.use_linked_cards=Использовать привязанные карты
 
 #passport
 passport.thirdname=Отчество
@@ -133,6 +143,7 @@ car.description=Краткое описание
 car.features=Особенности
 car.nearest_available_date=Доступна с
 car.discount_title=Ваша скидка
+car.related_offers=Так же вас может заинтересовать
 
 #footer
 more_about_us=Больше о нас
