--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -30,16 +30,18 @@ error_500_title=Извините, непредвиденная ошибка!
 error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
 
 #data
-data.edit=изменить
+data.edit=редактировать
+data.editing=Редактирование
+data.change=изменить
 data.confirm=подтвердить
 data.cancel=отменить
 data.update_error=Ошибка обновления, данные не обновлены
 data.add_error=Ошибка добавления данных
-data.create_error=Ошибка создания, попробуйте позже
 data.incorrect_data=Некорректные данные, попробуйте еще раз
+data.invalid_old_password=Пароль не подтвержден
 data.retrieve_error=Ошибка получения данных, попробуйте позже
 data.updated=Данные обновлены
-data.successfully=Успешно!
+data.login_updated=Теперь вы можете войти используя свой новый логин
 data.delete_error=Ошибка удаления
 
 #main page content
@@ -82,11 +84,14 @@ user.all_users=Все пользователи
 user.passport_data=Паспортные данные
 user.bankcards_title=Банковские карты
 user.registration_date=Дата регистрации
+user.old_password=Старый пароль
+user.new_password=Новый пароль
 
 #order
 order.status.new=новый
-order.status.pending=обработка
+order.status.processing=обработка
 order.status.paid=оплачен
+order.status.not_paid=не оплачен
 order.status.rent=аренда
 order.status.ended=завершен
 order.status.expired=просрочен
