--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -8,6 +8,7 @@ log_out=Выйти
 go_to_main_page=вернуться на главную
 registration=Регистрация
 news=Новости
+news.all_news=Все новости
 rules=Правила аренды
 stocks=Акции
 cars_title=Автомобили
