--- a/src/main/resources/appLocalization/app.properties
+++ b/src/main/resources/appLocalization/app.properties
@@ -23,6 +23,8 @@ name=Имя
 save_title=Сохранить
 cancel_title=Отменить
 work_schedule=с 9:00 до 21:00 ежедневно
+page_forward=Следующие
+page_back=Предыдущие
 
 #info
 warning.delete=Действие нельзя отменить, вы уверены?
@@ -98,6 +100,7 @@ order.status.rent=аренда
 order.status.ended=завершен
 order.status.expired=просрочен
 order.status.canceled=отменен
+order.status.denied=отказано
 order_title=Заказ
 order.date=Дата
 order.status=Статус
@@ -112,6 +115,12 @@ order.total=итого
 order.days=дней
 order.fill_out_data_in_office=Заполнить данные в офисе
 order.update_passport_data_in_office=Обновить паспортные данные
+
+#return_act
+return_date=Дата возврата
+car_odometer=Общий пробег
+car_damage=Повреждения
+fine=Штраф
 
 #payment
 payment_title=Оплата
